# gittoken

./: .gitignore  README.md  truffle-config.js
backend/: .gitignore  Cargo.toml  REDME.md  docker-compose.yml
backend/authorization/: Cargo.toml
backend/authorization/src/: lib.rs
backend/migrations/1_create_github_account/: down.sql  up.sql
backend/rithub/: Cargo.toml  README.md
backend/rithub/app/: Cargo.toml
backend/rithub/app/src/: lib.rs
backend/rithub/error/: Cargo.toml
backend/rithub/error/src/: lib.rs
backend/rithub/headers/: Cargo.toml
backend/rithub/headers/src/: lib.rs
backend/rithub/src/: api.rs  lib.rs
backend/rithub/webhook/: Cargo.toml
backend/rithub/webhook/src/: lib.rs
backend/src/: github.rs  handlers.rs  main.rs  middleware.rs  sdk.rs  user.rs
backend/src/lib/: mod.rs  web_error.rs
backend/src/migrations/: V1__initial.sql
contracts/: GitToken.sol
frontend/: .prettierrc.js  README.md  package-lock.json  package.json  polyfills.ts  rollup.config.js  snowpack.config.js  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.svelte  Landing.svelte  Login.svelte
frontend/src/api/: api.ts
frontend/src/portal/: Home.svelte
frontend/src/public/: Install.Svelte
frontend/src/state/: index.ts
migrations/: 2_deploy_contracts.js
open-contribution-token/js/: .gitignore
