[package]
name = "backend"
version = "0.1.0"
authors = ["kristofferberg-vipps <kristoffer.hovland.berg@vipps.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.7"
log = "0.4"
envconfig = "0.9.1"
diesel = { version = "1.4.4", features = ["postgres"] }
reqwest = { version = "0.11", features = ["json","blocking"] }
serde = { version = "1.0.125", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
