[package]
name = "authorization"
version = "0.1.0"
authors = ["kristohberg <kristoffer.hovland.berg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "7"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0"
