[package]
name = "webhook"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "webhook"
path = "src/lib.rs"

[dependencies]
error = {path="../error"}
headers = {path="../headers"}
serde = { version = "1.0.125", features = ["derive"] }

